@@ -13,8 +13,8 @@ AUX 6/tomcat.init.2 4118 RMD160 dc077b83f3d2ae8b04935b360ea8bafc2b3c41fc SHA1 30
 DIST apache-tomcat-5.5.27-src.tar.gz 7382057 RMD160 8114fa3be19fd28a5d2d0d7e7087f6d82e0f111f SHA1 c6217d78d2e64fa839a30372bd2724ba75030c14 SHA256 90bc8abcddda604e855c37035653b1e24b31c2f09b7a29235e92d65025f7a334
 DIST apache-tomcat-6.0.18-src.tar.gz 3484249 RMD160 ef85db0d65a4f3bdd3ca821420d06535050b6a93 SHA1 9182b0d6b2d0cb2d60f04be6211f3b3516bc518e SHA256 f5ad5dd12e221d75e25234ca734fb434cf45f3fcea93623232a73dc9bfd03dc4
 EBUILD tomcat-5.5.27-r5.ebuild 12018 RMD160 41576e72f8385db5531d452a70dae55832b7521c SHA1 fa592b415bf4f13344695acf2b76ecff49c0b809 SHA256 96d51db2fb8a3ce41ef033c91a9bfe2e1e34d93240305f4dfcf3e862afe371f5
-EBUILD tomcat-5.5.27-r6.ebuild 12482 RMD160 acfe3ea38ddce769561602ded46368ee685731aa SHA1 5826ddb10d2f18f3e76aa8af10967b984bb2cd02 SHA256 b288a5954012d02882eb3f420338e603dae92d07b34be98dc1fe3c94118b7e5d
+EBUILD tomcat-5.5.27-r6.ebuild 12486 RMD160 0e72c03c0c8cd99dfaacc345e1c54862eee8ec77 SHA1 8a287a00a13c507ccd916fbc03561b8e8d393bbe SHA256 14715c298c9f9e2d31bb4690ff24f0561eb9f1cda0a7f6c685f1325868195011
 EBUILD tomcat-6.0.18-r5.ebuild 11554 RMD160 7b534480fd9e55b33c1a9c6953ac6c936448f59a SHA1 c2c6f0ed393020259a759f9e982a74b94e52e355 SHA256 0e6da63427bbe26672a168de1a33cf214dec182c4fbede10a635107c1eac3fe3
-EBUILD tomcat-6.0.18-r6.ebuild 11305 RMD160 ec7d2e10be67f52bc63e7b8e4366fd0a6e763da1 SHA1 ba1f975599977b4c1a28da468a63f0eeeede3c77 SHA256 9ebcaa04ac3b76291cb1e01422eb87596cb0f339ed43ac329bdac281ad71219b
-MISC ChangeLog 57884 RMD160 580b504b788cdc0e2678a7fce267228358694249 SHA1 5781a5357b9c2522ee57d0c95b62a22b2aed7fa7 SHA256 5b943897c01659466f47429403c7e7e123fd6681743a694e5453ed5b3bb438a7
+EBUILD tomcat-6.0.18-r6.ebuild 11334 RMD160 48b7272173a16a09ea60fc6571fc734354686c50 SHA1 f1013898adb190bfa7c3afafcdb80611ab49ab1c SHA256 a1e85d84f2360e00fa637e5a97b799453f3ff73171cb2d980beeb81a4decdb2a
+MISC ChangeLog 58016 RMD160 57c3a25896e616d95f7d48b71dd275c4d6c93b61 SHA1 b063f3c8c54a93928ab2d303d747d38442e33242 SHA256 6c901ab0583d6ed416445873a28ee8c0bba2e823e706094776599a5527108995
 MISC metadata.xml 658 RMD160 db94c7bc6ba622acfe88f970aa7d2e6fa1718a2a SHA1 aa25178fefb68df9dee7d8fc0d925a2fbbb655dd SHA256 5ddc2743ca9e3ec0bef7983248a9c8eda9238425288efb3acdecc8a828714bd8
